add SelectionModel